# CS100-Spring2025-CMakeTutorial

./: .gitignore  .gitmodules  README.md
application/: .gitignore  CMakeLists.txt
application/src/: CMakeLists.txt
application/src/LorenzField/: CMakeLists.txt  LorenzField.cpp  LorenzField.h
application/src/Viewer/: CMakeLists.txt  Viewer.cpp
doc/: CMake 简明教程.md
doc/assets/: CMake 使用的工具链.excalidraw.md  CMake 构建.excalidraw.md  CMake 简明教程 项目架构.excalidraw.md  CMake 调试.excalidraw.md  CMake 配置.excalidraw.md  Cpp 此项目的编译.excalidraw.md  Cpp 项目的编译和运行.excalidraw.md
minimal/: LorenzField.cpp  LorenzField.h  MyVector.h  TraceQuery.cpp  plot.py
minimal-cmake/: CMakeLists.txt
minimal-cmake/scripts/: plot.py
minimal-cmake/src/: CMakeLists.txt
minimal-cmake/src/LorenzField/: CMakeLists.txt  LorenzField.cpp  LorenzField.h
minimal-cmake/src/TraceQuery/: CMakeLists.txt  TraceQuery.cpp
